--- a/index.html
+++ b/index.html
@@ -960,6 +960,11 @@ button {
   border-radius: 5px;
   text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
   transition: opacity 0.2s ease;
+  
+}
+button a {
+  text-decoration: none;
+  color: wheat;
 }
 button:hover {
   opacity: 0.7;
@@ -1541,7 +1546,8 @@ button:focus {
       <div class="number">4</div>
     </div>
     <div class="subtitle">Oops. Looks like you took a wrong turn.</div>
-    <button>Go back</button>
+    <button><a  href="https://www.linkedin.com/in/jitendra-bansal-/" target="_blank">Linkedin</a></button>
+    <button><a  href="https://www.instagram.com/Jitendra_bansal5930/" target="_blank">Instagram</a></button>
   </div>
 </div>
 
